--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -12,3 +12,15 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+//MEDIA QUERY MANAGER
+/*
+0 - 600px :     Phone 
+600 - 900px :   Tablet potrait  
+900 - 1200px :  Tablet landscape
+(1200 -1800px) is where our normal styles apply
+1800px + :      Big desktop 
+*/
+
+@mixin respond-phone {
+}
