--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -21,3 +21,12 @@
 (1200 -1800px) is where our normal styles apply
 1800px + :      Big desktop 
 */
+
+//MEDIA QUERY MANAGER
+/*
+0 - 600px :     Phone 
+600 - 900px :   Tablet potrait  
+900 - 1200px :  Tablet landscape
+(1200 -1800px) is where our normal styles apply
+1800px + :      Big desktop 
+*/
