--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,13 @@
 1800px + :      Big desktop 
 */
 /*
-0 - 600px :     Phone 
-600 - 900px :   Tablet potrait  
-900 - 1200px :  Tablet landscape
-(1200 -1800px) is where our normal styles apply
-1800px + :      Big desktop 
+$breakpoint argument choices: 
+- phone 
+- tab-port
+- tab-land 
+- Big - Desktop
+
+1em = 16px
 */
 @keyframes moveInLeft {
   0% {
@@ -49,6 +51,18 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 37.5em) {
+    html {
+      font-size: 50%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 60%; } }
+  @media (max-width: 75em) {
+    html {
+      font-size: 70%; } }
+  @media (mix-width: 112.5em) {
+    html {
+      font-size: 80%; } }
 
 body {
   box-sizing: border-box; }
