--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -22,11 +22,40 @@
 1800px + :      Big desktop 
 */
 
-//MEDIA QUERY MANAGER
+@mixin respond-phone {
+  @media (max-width: 600px) {
+    @content;
+  }
+}
+
 /*
-0 - 600px :     Phone 
-600 - 900px :   Tablet potrait  
-900 - 1200px :  Tablet landscape
-(1200 -1800px) is where our normal styles apply
-1800px + :      Big desktop 
+$breakpoint argument choices: 
+- phone 
+- tab-port
+- tab-land 
+- Big - Desktop
+
+1em = 16px
 */
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media (max-width: 37.5em) {
+      @content;
+    }
+  }
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em) {
+      @content;
+    }
+  }
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em) {
+      @content;
+    }
+  }
+  @if $breakpoint == big-desktop {
+    @media (mix-width: 112.5em) {
+      @content;
+    }
+  }
+}
