--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,20 +10,18 @@ html {
   //this defines what 1 rem is
   font-size: 62.5%; // 1 rem = 10px
 
-  @include respond(phone) {
-    font-size: 50%;
+  @include respond(tab-land) {
+    //width <1200?
+    font-size: 56.25%; // 1 rem =9rem , 9/16 =56.25%
   }
 
   @include respond(tab-port) {
-    font-size: 60%;
-  }
-
-  @include respond(tab-land) {
-    font-size: 70%; //
+    //width <900?
+    font-size: 50%; // 1 rem =8px , 8/16 = 50%
   }
 
   @include respond(big-desktop) {
-    font-size: 80%;
+    font-size: 75%; // 1 rem = 12 px ,12/16 = 75%
   }
 }
 
