--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -54,7 +54,7 @@ $breakpoint argument choices:
     }
   }
   @if $breakpoint == big-desktop {
-    @media (mix-width: 112.5em) {
+    @media (min-width: 112.5em) {
       @content;
     }
   }
