--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -37,6 +37,9 @@ $breakpoint argument choices:
 
 1em = 16px
 */
+
+//ORDER : Base + typography  > General layout + grid > Page layout > Components
+
 @mixin respond($breakpoint) {
   @if $breakpoint == phone {
     @media (max-width: 37.5em) {
