--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,6 +11,9 @@
   position: relative;
   clip-path: polygon(0 0, 100% 0, 100% 77vh, 0 100%);
 
+  @include respond(phone) {
+    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  }
   &__logo-box {
     position: absolute;
     top: 4rem;
