--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -28,17 +28,30 @@
   &__left {
     width: 33.333333%;
     display: table-cell;
+
+    @include respond(tab-port) {
+      display: table-header-group;
+    }
   }
   &__right {
     width: 66.666667%;
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(tab-port) {
+      display: table-footer-group;
+    }
   }
 
   &__img {
     display: block;
     width: 100%;
+
+    @include respond(tab-port) {
+      display: inline-block;
+      width: 50%;
+    }
   }
   &__text {
     font-size: 1.4rem;
