--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ $breakpoint argument choices:
   }
 }
 
-head @keyframes moveInBottom {
+@keyframes moveInBottom {
   0% {
     opacity: 0;
     transform: translateY(3rem);
